<resources>
    <string name="app_name">Bitty</string>
    <string name="title_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="reply">Reply</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="networking_wrong_msg">Networking wrong.\n Please try again later.</string>
    <string name="create">Create</string>
    <string name="tweet">Tweet</string>
    <string name="in_reply_to">In reply to \ </string>
    <string name="submit_reply">Submit reply</string>

    /* drawer menu */
    <string name="login">\  Login</string>
    <string name="help_me_improve">\  Help me improve</string>
    <string name="user_profile_photo">User profile photo</string>

    <string name="favoed">favoed</string>
    <string name="notes_space">\ Notes</string>
    <string name="no_new_tweets">no new tweets o_O</string>
    <string name="user_s_profile_image">User\'s profile image</string>
    <string name="user_s_banner_image">User\'s banner image</string>

    <string name="following">Following\ </string>
    <string name="follower">\ Follower\ </string>
    <string name="tweet_entity_images">tweet entity images</string>

    <string name="auth_fail_msg_snackbar">Auth failed. Please try later.</string>
</resources>
