<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw__solid_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.robyn.bitty.ReplyActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="Reply"
            android:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/in_reply_to_layout"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_below="@id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reply_to"
            android:textSize="16sp"
            android:text="@string/in_reply_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/inReplyTo_userId"
            android:layout_toEndOf="@id/reply_to"
            android:textSize="16sp"
            android:textColor="@color/tw__blue_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:divider="@drawable/my_divider"
        android:showDividers="beginning"
        app:counterMaxLength="140"
        app:counterEnabled="true"
        app:counterOverflowTextAppearance="@color/colorAccent"
        android:layout_below="@id/in_reply_to_layout"
        android:layout_above="@+id/reply_button"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reply_input"
            android:background="@color/tw__solid_white"
            android:gravity="start|top"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@id/reply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/tw__solid_white"
        android:background="@color/tw__composer_blue"
        android:text="@string/submit_reply"/>
</RelativeLayout>
