<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.robyn.bitty.utils.ModelUtilsKt"/>

        <import type="com.robyn.bitty.utils.TextUtilsKt"/>

        <variable
            name="tweet"
            type="com.twitter.sdk.android.core.models.Tweet"/>
    </data>

    <LinearLayout
        android:id="@+id/solo_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/retweet_by_solo"
            style="@style/tweet.screenNameRetweet"
            retweetVisible="@{tweet}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_retweet"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="16dp"
            android:text="@{TextUtilsKt.retweetBy(tweet)}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_profile_image_solo"
                loadImageCircle="@{tweet}"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:contentDescription="@string/user_s_profile_image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/user_screen_name_solo"
                    style="@style/tweet.userNameRetweet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{TextUtilsKt.atScreenName(tweet)}"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_name_solo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{tweet.user.name}"/>

                    <TextView
                        android:id="@+id/create_at_solo"
                        style="@style/tweet.screenNameTextSolo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_light"
                        android:text="@{TextUtilsKt.createAtFormatted(tweet)}"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tweet_text_solo"
            style="@style/tweet.entitiesTextSolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@{TextUtilsKt.trimLinks(tweet)}"/>

        <ImageView
            android:id="@+id/media_image_solo"
            loadImage="@{tweet}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tweet_entity_images"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notesNum"
                style="@style/notesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/notesText"
                style="@style/notesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/notes_space"
                android:visibility="invisible"/>

            <LinearLayout
                android:id="@+id/reply_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:src="@drawable/ic_reply"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="16dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/retweet_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/retweet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:src="@drawable/ic_retweet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="18dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/favo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:contentDescription="@string/favoed"
                    android:onClick="@{(view) -> ModelUtilsKt.favorite(view, tweet.id)}"
                    android:src="@drawable/ic_like"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="16dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:actionProviderClass=
                    "android.widget.ShareActionProvider"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:src="@drawable/ic_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="16dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
